added problem statement

--- a/Traveling salesman problem using genetic algorithm.ipynb
+++ b/Traveling salesman problem using genetic algorithm.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "302d477e",
+   "metadata": {},
+   "source": [
+    "### Psuedo Code:\n",
+    "\n",
+    "Initialize procedure GA{\n",
+    "    Set cooling parameter = 0;\n",
+    "    Evaluate population P(t);\n",
+    "    While( Not Done ){\n",
+    "        Parents(t) = Select_Parents(P(t));\n",
+    "        Offspring(t) = Procreate(P(t));\n",
+    "        p(t+1) = Select_Survivors(P(t), Offspring(t));\n",
+    "        t = t + 1; \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8e2645ba",
@@ -284,7 +303,16 @@
     "            print(population[i].gnome, population[i].fitness)\n",
     "        gen += 1\n",
     " \n",
-    " \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b95cc08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if __name__ == \"__main__\":\n",
     " \n",
     "    mp = [\n",
@@ -296,14 +324,6 @@
     "    ]\n",
     "    TSPUtil(mp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b95cc08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
